<resources>
    <string name="app_name">Android Project</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="wallet_logo">Wallet Logo</string>
    <string name="tab_label_dashboards">Dashboards</string>
    <string name="tab_label_wallets">Wallets</string>
    <string name="tab_label_info">Info</string>
    <string name="menu_item_add_wallet">Add Wallet</string>
    <string name="tab_menu_speakable">Tab menu for Dashboards, Wallets, Info</string>
    <string name="et_wallet_name">Wallet Name</string>
    <string name="et_amount">Amount</string>
    <string name="btn_save">Save</string>
    <string name="lbl_official">Official</string>
    <string name="lbl_blue">Blue</string>
    <string name="lbl_usd" translatable="false">USD</string>
    <string name="lbl_btc" translatable="false">BTC</string>
    <string name="wallet_total">Wallets total:\n %s %s</string>
    <string name="no_wallets">No wallets available</string>
    <string name="getting_wallets">Getting Wallets…</string>
    <string name="logout">Logout</string>
    <string name="incorrect_name_or_password">Incorrect name or password</string>
    <string name="settings">Settings</string>
    <string name="dashboard_settings">Dashboard Settings</string>
    <string name="dashboard_currency">Dashboard Currency</string>
    <string name="title_activity_settings">Dashboard Settings</string>
</resources>