<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_wallet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="24dp"
    android:paddingEnd="20dp"
    android:paddingBottom="24dp"
    tools:context=".activities.WalletActivity">

    <!-- Wallet Name -->
    <EditText
        android:id="@+id/etWalletName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/et_wallet_name"
        android:inputType="text"
        android:padding="12dp" />

    <!-- Amount -->
    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/et_amount"
        android:inputType="numberDecimal"
        android:padding="12dp" />

    <!-- Currency Spinner -->
    <Spinner
        android:id="@+id/spinnerCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="16dp" />

    <!-- Save Button -->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="saveWalletClicked"
        android:padding="12dp"
        android:text="@string/btn_save" />

</LinearLayout>